kubernetes/applications/atlas/docs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlas-docs
  namespace: atlas
  labels:
    app.kubernetes.io/name: atlas-docs
    app.kubernetes.io/part-of: atlas
    app.kubernetes.io/component: documentation
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - docs.atlas.az.ameciclo.org
  rules:
    - host: docs.atlas.az.ameciclo.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atlas-docs
                port:
                  number: 80
